boucle carte produits

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -73,7 +73,7 @@
           <h2>Une gamme d'articles exclusifs</h2>
         </div>
         <section class="items" id="items">
-          <!--  section dynamique  -->
+          <!--  section dynamique  
           <a href="./product.html?id=42">
             <article>
               <img
@@ -87,7 +87,7 @@
               </p>
             </article>
           </a>
-          <!-- fin -->
+           fin -->
         </section>
       </div>
     </main>
