--- a/front/html/index.html
+++ b/front/html/index.html
@@ -123,5 +123,6 @@
       </div>
     </footer>
     <script src="../js/script.js"></script>
+    <script src="../js/function.js"></script>
   </body>
 </html>
